--- a/styles/index.css
+++ b/styles/index.css
@@ -5,7 +5,6 @@ body{
     background-image: url("../images/background.jpg");
     background-repeat: no-repeat;
     background-size: cover;
-    overflow: hidden;
 }
 
 h1{
@@ -17,38 +16,24 @@ h1{
 }
 
 #container{
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    position:absolute;
-    top:50%;
-    left:50%;
-    transform: translate(-50%, -50%);
+    display:flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 10px;
+    width:100vw;
+    height: 70%;
 }
 
-.pizza, .meatloaf, .lasagna{
-    position: relative;
-    width: 900px;
-    height: 100%;
-    text-align: center;
+div{
+    width: 33%;
 }
 
 img{
-    height: 600px;
     width: 100%;
+    height: 100%;
     filter:blur(5px);
 }
 
 img:hover{
     filter:blur(0px);
-}
-
-a{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    z-index: 1;
-    color:#4A756E;
-    font-size: 3em;
-    text-decoration: none;
 }
